Solve the container overflow issue and make the site more visually appealing

--- a/style.css
+++ b/style.css
@@ -1,17 +1,76 @@
 body {
+  margin: 0;
+}
+
+.btns {
+  display: flex;
+  gap: 40px;
+  margin-top: 50px;
+}
+
+.btn {
+  align-items: center;
+  appearance: none;
+  background-color: #fcfcfd;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395a;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+}
+
+.btn:focus {
+  box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+}
+
+.btn:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.btn:active {
+  box-shadow: #d6d6e7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+.main-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  box-sizing: border-box;
-  margin: 0;
+}
+
+.container {
+  margin-top: 50px;
+  border: 1px solid rgb(253, 210, 49);
+  height: 600px;
+  width: 600px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .grid-container {
   display: flex;
   flex-direction: column;
   border: 1px solid red;
-  height: 100vh;
 }
 
 .grid-row {
@@ -19,11 +78,6 @@ body {
 }
 
 .grid-item {
-  height: 20px;
-  width: 20px;
-  border: 1px solid black;
-}
-
-.grid-clear {
-  background-color: white;
+  border: 1px solid rgba(45, 35, 66, 0.3);
+  box-sizing: border-box;
 }
